--- a/Gimbal_Mirror/Gimbal_Mirror.ui
+++ b/Gimbal_Mirror/Gimbal_Mirror.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>465</width>
-    <height>390</height>
+    <width>571</width>
+    <height>386</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,7 +17,7 @@
    <widget class="QSlider" name="x_axis">
     <property name="geometry">
      <rect>
-      <x>60</x>
+      <x>70</x>
       <y>300</y>
       <width>341</width>
       <height>31</height>
@@ -51,7 +51,7 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>29</y>
+      <y>40</y>
       <width>31</width>
       <height>231</height>
      </rect>
@@ -85,13 +85,85 @@
      </rect>
     </property>
    </widget>
+   <widget class="QLabel" name="label_y_axis">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>20</y>
+      <width>47</width>
+      <height>13</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>12</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Y-Axis</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_x_axis">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>310</y>
+      <width>47</width>
+      <height>13</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>12</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>X-Axis</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton">
+    <property name="geometry">
+     <rect>
+      <x>430</x>
+      <y>60</y>
+      <width>111</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>12</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Start</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton_2">
+    <property name="geometry">
+     <rect>
+      <x>430</x>
+      <y>180</y>
+      <width>111</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>12</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Stop</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>465</width>
+     <width>571</width>
      <height>21</height>
     </rect>
    </property>
